添加了头像上传

--- a/src/pages/setting/components/BaseView.less
+++ b/src/pages/setting/components/BaseView.less
@@ -19,6 +19,7 @@
       line-height: 22px;
     }
     .avatar {
+      border-radius: 80px;
       width: 144px;
       height: 144px;
       margin-bottom: 12px;
@@ -26,6 +27,7 @@
       img {
         width: 100%;
       }
+
     }
     .button_view {
       width: 144px;
