fix some problem

--- a/src/pages/center/components/Projects/index.less
+++ b/src/pages/center/components/Projects/index.less
@@ -2,7 +2,11 @@
 
 .coverCardList {
   margin-bottom: -24px;
-
+  .cardAvatar {
+    width: 48px;
+    height: 48px;
+    border-radius: 48px;
+  }
   .card {
     :global {
       .ant-card-meta-title {
@@ -16,7 +20,7 @@
       .ant-card-meta-description {
         height: 44px;
         overflow: hidden;
-        line-height: 22px;
+        //line-height: 22px;
       }
     }
 
