--- a/src/pages/UserProject/style.less
+++ b/src/pages/UserProject/style.less
@@ -15,9 +15,14 @@
       max-width: 100%;
     }
   }
+  .submitButtons {
+    display: block;
+    margin-bottom: 24px;
+    white-space: nowrap;
+  }
   .cardInfo {
     margin-top: 16px;
-    margin-left: 40px;
+    //margin-left: 40px;
     zoom: 1;
     &::before,
     &::after {
